# Win3D

./: .gitignore  BUILD.txt  README.md  REQUIREMENTS.txt
Win3D/: CMakeLists.txt  runner.sh
Win3D/core/engine/: Bitmap3D.cpp  Bitmap3D.hpp  Window.hpp
Win3D/core/scene/: Scene.cpp  Scene.hpp  SceneUtil.hpp
Win3D/core/util/: Colour.hpp
Win3D/include/: Application.hpp  Engine.hpp  Renderer.hpp
Win3D/include/Renderer/: Renderer.hpp  Window.hpp
Win3D/include/engine/: Bitmap3D.hpp  Engine.hpp  Window.hpp
Win3D/include/graphicsPipeline/: GeometryProcessor.hpp  GeometryProcessorUtil.hpp  GraphicsPipeline.hpp  GraphicsPipelineInternals.hpp  Rasterizer.hpp  RayTracer.hpp
Win3D/include/graphicsPipelineOop/: GeometryProcessorClass.hpp  GraphicsPipelineClass.hpp  RasterizerClass.hpp
Win3D/include/renderer/: Bitmap3D.hpp  BoundingVolumeHierarchy.hpp  Camera.hpp  CameraRasterizer.hpp  CameraRayTracer.hpp  Rasterizer.hpp  Ray.hpp  RayTracer.hpp  Renderer.hpp  VertexShader.hpp  Viewport.hpp  Window.hpp
Win3D/include/scene/: Aabb.hpp  BvhNode.hpp  Camera.hpp  CameraRasterizer.hpp  CameraRayTracer.hpp  Materials.hpp  Mesh.hpp  Object.hpp  Object3D.hpp  PointLight.hpp  Scene.hpp  Util.hpp  aabb.hpp  bvhNode.hpp
Win3D/include/util/: Colour.hpp  Matrix.hpp  Vector.hpp
Win3D/resources/: bunnyRaster.ppm  bunnyTracer.ppm  cube.blend  triangleRaster.ppm
Win3D/src/: Application.cpp  Application.hpp  Engine.cpp  Main.cpp  Renderer.cpp  Window.cpp
Win3D/src/Renderer/: Renderer.cpp  Window.cpp
Win3D/src/application/: Application.cpp
Win3D/src/engine/: Bitmap3D.cpp  (+4 more)
(+142 files in other folders)
